web-infras/parser/tests/fixtures/babel/es2015/uncategorised/125/output.txt
[SyntaxError]: A class may only have one constructor. (1,28)
1|class A { constructor() {} 'constructor'() {} }
 |                          ^
